--- a/helm/users-backend/templates/secret.yaml
+++ b/helm/users-backend/templates/secret.yaml
@@ -7,4 +7,5 @@ data:
     REALM: {{ .Values.keycloak.realm | b64enc }}
     CLIENT_ID: {{ .Values.keycloak.clientId | b64enc }}
     CLIENT_SECRET: {{ .Values.keycloak.clientSecret | b64enc }}
+    SSL_PATH: {{ .Values.application.sslPath | b64enc }}
 type: Opaque
