main: updated service monitor

--- a/app/src/main/resources/application-cuber.yaml
+++ b/app/src/main/resources/application-cuber.yaml
@@ -24,12 +24,10 @@ management:
     server:
         port: ${ACTUATOR_PORT}
     endpoints:
-        web.exposure.include: "*"
-    endpoint:
-        shutdown:
-            enabled: true
-        prometheus:
-            enabled: true
+        web.exposure.include: health, prometheus
+        web:
+            path-mapping:
+              prometheus: "metrics"
 
 logging:
     stack-trace:
