--- a/app/src/main/resources/application-local.yaml
+++ b/app/src/main/resources/application-local.yaml
@@ -17,6 +17,15 @@ keycloak:
     realm: user-management
     mode: LOCAL
 
+management:
+    server:
+        port: 8081
+    endpoints:
+        web.exposure.include: health, prometheus
+        web:
+            path-mapping:
+                prometheus: "metrics"
+
 logging:
     stack-trace:
         print: true
