--- a/app/src/main/resources/application-cuber.yaml
+++ b/app/src/main/resources/application-cuber.yaml
@@ -23,11 +23,17 @@ keycloak:
 management:
     server:
         port: ${ACTUATOR_PORT}
+    metrics:
+        distribution:
+            slo:
+                http.server.requests: 100ms, 200ms, 300ms, 400ms, 500ms
+            percentiles-histogram:
+              "[http.server.requests]": true
     endpoints:
         web.exposure.include: health, prometheus
         web:
             path-mapping:
-              prometheus: "metrics"
+                prometheus: "metrics"
 
 logging:
     stack-trace:
