--- a/helm/users-backend/values.yaml
+++ b/helm/users-backend/values.yaml
@@ -11,7 +11,7 @@ application:
     imagePrefix: "docker-image"
     version: 1.0.0
     pullPolicy: IfNotPresent
-    logSecurityLevel: debug
+    logSecurityLevel: info
     sslPath: "./cert/"
     javaOpts: "-XX:MaxRAMPercentage=75.0"
 
