main: added granted authority converter

--- a/app/src/main/resources/application-local.yaml
+++ b/app/src/main/resources/application-local.yaml
@@ -5,7 +5,7 @@ spring:
         oauth2:
             resourceserver:
                 jwt:
-                    issuer-uri: ${front-url}/${realmsPath}
+                    jwk-set-uri: ${front-url}/${realmsPath}/protocol/openid-connect/certs
 
 front-url: https://front-keycloak.com
 realmsPath: realms/user-management
