--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ projectReactorTestVersion=3.6.5
 
 s4jVersion=2.0.13
 logbackVersion=1.5.6
-javaxValidation=2.0.1.Final
+javaxValidation=3.1.0
 micrometerVersion=1.2.5
 
 jacksonMapperVersion=2.15.4
@@ -22,6 +22,11 @@ mapstructVersion=1.5.5.Final
 keycloakAdminVersion=26.0.3
 restEasyVersion=6.2.11.Final
 jakartaWsRsVersion=3.1.0
+
+postgresVersion=42.6.2
+postgresR2DBCVersion=1.0.5.RELEASE
+ulidGeneratorVersion=5.2.3
+liquibaseCoreVersion=4.27.0
 
 #####
 app-version=1.0.0
