--- a/helm/users-backend/templates/secret.yaml
+++ b/helm/users-backend/templates/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: {{ .Values.application.name }}-secret
-    namespace: {{ .Values.application.namespace }}
+    namespace: {{ .Values.global.applicationNs }}
 data:
     REALM: {{ .Values.keycloak.realm | b64enc }}
     CLIENT_ID: {{ .Values.keycloak.clientId | b64enc }}
