--- a/helm/users-backend/Chart.yaml
+++ b/helm/users-backend/Chart.yaml
@@ -1,6 +1,10 @@
 apiVersion: v2
-name: helm-users-backend
-description: app users-backend chart
-type: application
+name: users-backend-chart
+description: common chart for users backend
 version: 1.0.0
-kubeVersion: ">= 1.20.0-0"
+appVersion: 1.0.0
+dependencies:
+    - name: helm-migration-job
+      version: 1.0.0
+      repository: "file://./charts/migration-job"
+      condition: true
