--- a/helm/users-backend/templates/appnamespace.yaml
+++ b/helm/users-backend/templates/appnamespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-    name: {{ .Values.application.namespace }}
+    name: {{ .Values.global.applicationNs }}
     annotations:
         "helm.sh/resource-policy": keep
 {{- end -}}
