--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -1,7 +1,7 @@
 springBootVersion=3.3.0
 springDependencyManagementVersion=1.1.5
-kotlinVersion=1.9.20
-kotlinJpaPluginVersion=2.1.0
+kotlinVersion=1.9.21
 liquibasePluginVersion=2.2.2
+detektVersion=1.23.4
 
 
