--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,8 @@ postgresR2DBCVersion=1.0.5.RELEASE
 ulidGeneratorVersion=5.2.3
 liquibaseCoreVersion=4.27.0
 
+detektVersion=1.23.4
+
 #####
 app-version=1.0.0
 app-group=users.backend
