add refresh token

--- a/app/src/main/resources/validation/ValidationMessages.properties
+++ b/app/src/main/resources/validation/ValidationMessages.properties
@@ -6,4 +6,5 @@ jakarta.validation.constraints.Email.message=field must be a well-formed email a
 jakarta.validation.constraints.Size.message=value must be between {min} and {max}.
 jakarta.validation.constraints.Max.message=value must be less than or equal to {value}.
 jakarta.validation.constraints.Min.message=value must be greater than or equal to {value}.
-auth.module.validation.user.disabled.message=user must be disabled on sign up.
+user.disabled.message=user must be disabled on sign up.
+user.refresh.token.invalid=refresh token of user {0} is invalid: {1}
