--- a/helm/users-backend/templates/secret.yaml
+++ b/helm/users-backend/templates/secret.yaml
@@ -8,4 +8,8 @@ data:
     CLIENT_ID: {{ .Values.keycloak.clientId | b64enc }}
     CLIENT_SECRET: {{ .Values.keycloak.clientSecret | b64enc }}
     SSL_PATH: {{ .Values.application.sslPath | b64enc }}
+    EMAIL_HOST: {{ .Values.email.host | b64enc }}
+    EMAIL: {{ .Values.email.username | b64enc }}
+    EMAIL_PASS: {{ .Values.email.password | b64enc }}
+    EMAIL_SEND_TO: {{ .Values.email.emailSendTo | b64enc }}
 type: Opaque
