main: added swagger

--- a/app/src/main/resources/application-cuber.yaml
+++ b/app/src/main/resources/application-cuber.yaml
@@ -58,6 +58,13 @@ management:
             path-mapping:
                 prometheus: "metrics"
 
+# open api setup
+springdoc:
+    api-docs:
+        enabled: true
+        path: /swagger-docs/v3/api-docs
+    swagger-ui.path: ${springdoc.api-docs.path}/swagger-ui.html
+
 logging:
     stack-trace:
         print: true
