main: added http logging and tracing

--- a/app/src/main/resources/application-cuber.yaml
+++ b/app/src/main/resources/application-cuber.yaml
@@ -1,6 +1,8 @@
 spring:
     thymeleaf:
         check-template: false
+    reactor:
+        context-propagation: auto
     mail:
         host: ${EMAIL_HOST}
         port: ${EMAIL_PORT}
