--- a/helm/users-backend/Chart.yaml
+++ b/helm/users-backend/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
 name: users-backend-chart
 description: common chart for users backend
-version: 1.0.1
-appVersion: 1.0.1
+version: 1.0.2
+appVersion: 1.0.2
 dependencies:
     - name: helm-migration-job
       version: 1.0.1
       repository: "file://./charts/migration-job"
-      condition: false
+      condition: true
